# VoxelEngine

./: .gitignore  .gitmodules  Cargo.toml  README.md  enable_mario.bat
CazToon_extracted/CazToon_1.2.5/: LICENSE.txt
assets/materials/: core.toml
assets/shaders/: bloom.wgsl  grass.wgsl  mario.wgsl  particle.wgsl  postprocess.wgsl  shadow.wgsl  sky.wgsl  ssao.wgsl  voxel.wgsl
crates/vox-app/: Cargo.toml
crates/vox-core/: Cargo.toml
crates/vox-debug/: Cargo.toml
crates/vox-debug/src/: hud.rs  lib.rs  panels.rs
crates/vox-gen/: Cargo.toml
crates/vox-mesh/: Cargo.toml
crates/vox-physics/: Cargo.toml
crates/vox-platform/: Cargo.toml
crates/vox-render/: Cargo.toml
crates/vox-render/src/: bloom_ssao.rs  camera.rs  frustum.rs  gpu.rs  grass_pipeline.rs  lib.rs  mario_pipeline.rs  particles.rs  postprocess.rs  sky_pipeline.rs  voxel_pipeline.rs
crates/vox-render/tests/: shader_validate.rs
crates/vox-sm64/: Cargo.toml  build.rs
crates/vox-sm64/src/: ffi.rs  hud_textures.rs  lib.rs  surface.rs
crates/vox-world/: Cargo.toml
docs/: fixes.md  ideas.md
docs/plans/: 2026-07-04-voxel-engine-design.md  2026-07-04-voxel-engine-mvp.md.tasks.json  2026-07-09-cel-shading-design.md  2026-07-09-fluid-sim-design.md  2026-07-09-gas-particles-design.md  2026-07-09-water-refinement-design.md  2026-07-09-water-refinement.md  2026-07-10-bloom-ssao-design.md  2026-07-10-water-pollution-design.md  2026-07-11-progressive-damage-design.md  2026-07-11-progressive-damage.md  2026-07-11-progressive-damage.md.tasks.json  (+3 more)
scripts/: enable_mario.bat  screenshot.ps1
(+411 files in other folders)
