[package]
name = "vox-debug"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
vox-core = { workspace = true }
